--- a/content/reference/lisps.adoc
+++ b/content/reference/lisps.adoc
@@ -7,8 +7,8 @@ Rich Hickey
 :navlinktext: Differences with Lisps
 :prevpagehref: other_libraries
 :prevpagetitle: Other Libraries
-:nextpagehref: deps_and_cli
-:nextpagetitle: Deps and CLI
+:nextpagehref: clojure_cli
+:nextpagetitle: Clojure CLI
 
 ifdef::env-github,env-browser[:outfilesuffix: .adoc]
 
