--- a/content/reference/deps_edn.adoc
+++ b/content/reference/deps_edn.adoc
@@ -4,8 +4,8 @@ Alex Miller
 :type: reference
 :toc: macro
 :icons: font
-:prevpagehref: deps_edn
-:prevpagetitle: deps.edn
+:prevpagehref: clojure_cli
+:prevpagetitle: Clojure CLI
 
 ifdef::env-github,env-browser[:outfilesuffix: .adoc]
 
