--- a/content/reference/deps_edn.adoc
+++ b/content/reference/deps_edn.adoc
@@ -127,7 +127,7 @@ Examples:
   org.clojure/tools.reader {:mvn/version "1.1.1"}
   
   ;; example git dep
-  io.github.sally/awesome {:tag "v1.2.3" :sha "123abcd"}
+  io.github.sally/awesome {:git/tag "v1.2.3" :git/sha "123abcd"}
   
   ;; example local project
   my.dev/project {:local/root "../project"}
