--- a/content/reference/clojure_cli.adoc
+++ b/content/reference/clojure_cli.adoc
@@ -36,13 +36,13 @@ Each execution of the Clojure CLI runs a Clojure program by determining all path
 <<clojure_cli#use_repl,Start a REPL (default):>> +
 `clj [clj-opts] [-Aaliases]`
 
-<<clojure_cli#use_fn,Execute a function: (-X)>> +
+<<clojure_cli#use_fn,Execute a function (-X):>> +
 `clojure [clj-opts] -X[aliases] my/fn? [kpath v ...] kv-map?`
 
-<<clojure_cli#use_tool,Run a tool: (-T)>> +
+<<clojure_cli#use_tool,Run a tool (-T):>> +
 `clojure [clj-opts] -T[name|aliases] my/fn [kpath v ...] kv-map?`
 
-<<clojure_cli#use_main,Run a main namespace or script: (-M)>> +
+<<clojure_cli#use_main,Run a main namespace or script (-M):>> +
 `clojure [clj-opts] -M[aliases] [init-opts] [main-opts] [args]`
 
 [[options]]
