--- a/content/reference/evaluation.adoc
+++ b/content/reference/evaluation.adoc
@@ -24,16 +24,14 @@ Strings, numbers, characters, `true`, `false`, `nil` and keywords evaluate to th
 
 A Symbol is _resolved_:
 
-* If it is namespace-qualified:
-. If the symbol names a global public var, the value is the value of the binding of that var.
-. Since Clojure 1.12, if the namespace resolves to a class in the current namespace, and the symbol name is a static method, the value is a Clojure function that invokes the static method.
-. Since Clojure 1.12, if the namespace starts with `.` and after resolves to a class in the current namespace, and the symbol name is an instance method, the value is a Clojure function that invokes the instance method.
-. Else it is an error.
+* If it is namespace-qualified, the value is the value of the binding of the global var named by the symbol. It is an error if the reference is to a non-public var in a different namespace.
+* If the qualifier names a class or a mapping from symbol to class in the current namespace, and the symbol name is a static field, the value is the value of the static field. Since Clojure 1.12, if the symbol name is a method of the class, the value is a Clojure function that invokes the method.s
 * If it is package-qualified, the value is the Java class named by the symbol. It is an error if there is no Class named by the symbol. Since Clojure 1.12, a class name or primitive name ending with one or more `pass:[*]`s resolves to an array class.
 * Else, it is not qualified and the first of the following applies:
 . If it names a special form it is considered a special form, and must be utilized accordingly.
 . If in a local scope (e.g. in a function definition or a let form), a lookup is done to see if it names a local binding (e.g. a function argument or let-bound name). If so, the value is the value of the local binding.
-. A lookup is done in the current namespace to see if there is a mapping from the symbol to a class. If so, the symbol is considered to name a Java class object. Note that class names normally denote class objects, but are treated specially in certain special forms, e.g. `.` and `new`. Since Clojure 1.12, a class name or primitive name ending with one or more `pass:[*]`s resolves to an array class. 
+. A lookup is done in the current namespace to see if there is a mapping from the symbol to a class. If so, the symbol is considered to name a Java class object. Note that class names normally denote class objects, but are treated specially in certain special forms, e.g. `.` and `new`.
+. Since Clojure 1.12, if the name ends in one or more `pass:[*]`s, the name prior to the `pass:[*]` is resolved as package-qualified class name, or via a lookup for a mapping to class, or a primitive name. The value is the class of the array type for the specified class with dimension equal to the number of `:pass:[*] at the end. 
 . A lookup is done in the current namespace to see if there is a mapping from the symbol to a var. If so, the value is the value of the binding of the var referred-to by the symbol.
 . It is an error.
 
