--- a/content/community/companies.adoc
+++ b/content/community/companies.adoc
@@ -95,6 +95,8 @@ Also, check out the <<success_stories#,Clojure Success Stories>> and <<community
 * Cisco
 * Citi
 * ClanHR
+* Clean Coders
+* Clean Coders Studio
 * ClearCoin
 * Climate Corp (acquired by Monsanto)
 * Clockworks
